# Human-Following-Robot

./: CMakeLists.txt  CMakeLists.txt~  Kinect_tf.cpp  README.md  package.xml
launch/: skeleton_follower.launch
nodes/: skeleton_follower.py
src/: human_detection.cpp  human_show.cpp  human_tracker.cpp  human_tracker_show.cpp  openni2_tracker.cpp
